# d2-opencode12

./: .gitmodules  CMakeLists.txt  Makefile  README.md  d2tool  index.html
demo/: d2tool  demo  synchronized.hpp
slides/: 0_intro.md  1_lock_order_inconsistencies.md  2_existing_solutions.md  3_d2.md  4_demo.md  5_roadmap.md  6_conclusion.md  7_bonus.md  custom.css  showoff.json
src/: main.cpp  synchronized.hpp
